tests/baselines/reference/interfaceDeclaration2.errors.txt
==== tests/cases/compiler/interfaceDeclaration2.ts (1 errors) ====
    interface I1 { }
    module I1 { }
    
    interface I2 { }
    class I2 { }
          ~~
!!! interfaceDeclaration2.ts(5,7): error TS2000: Duplicate identifier 'I2'. Additional locations:
!!! 	interfaceDeclaration2.ts(4,1)
    
    interface I3 { }
    function I3() { }
    
    interface I4 { }
    var I4:number;
    
    